--- a/T2DiegoLópez.ipynb
+++ b/T2DiegoLópez.ipynb
@@ -31,7 +31,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# [Python se está convirtiendo en el lenguaje de programación más popular del mundo](https://www.economist.com/graphic-detail/2018/07/26/python-is-becoming-the-worlds-most-popular-coding-language)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Ciertamente no me propuse a crear un lenguaje destinado al consumo masivo. **(Guido van Rossum, científico de la computación)**.\n",
+    "\n",
+    "*La simplicidad y versatilidad del lenguaje Python lo han llevado a triplicar su número de búsquedas por usuarios en Google desde el 2010*, incluso por encima de Kim Kardashian. Ambos atributos son muy aprovechados por sus practicantes, **los Pythonistas**, quienes **han subido a la red cerca de 145,000 librerías** que ayudan desde el *desarrollo de videojuegos hasta el análisis de datos para la astronomía*.\n",
+    "\n",
+    "Parece que **Python es un gran imperio** cuya supremacía volverá obsoletos a los otros lenguajes. Tan sólo basta mencionar que **la CIA lo ha empleado para hackeos, Google para el desarrollo web y Pixar para la producción de películas**. Pero no hablemos muy pronto, pues otros lenguajes, como *C o Java, no desaparecerán así de fácil*; ya que estos dan al usuario más control sobre lo que ocurre en el procesador de la computadora. "
+   ]
   }
  ],
  "metadata": {
