--- a/T2DiegoLópez.ipynb
+++ b/T2DiegoLópez.ipynb
@@ -32,18 +32,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Python se está convirtiendo en el lenguaje de programación más popular del mundo](https://www.economist.com/graphic-detail/2018/07/26/python-is-becoming-the-worlds-most-popular-coding-language)"
+    "## [Python se está convirtiendo en el lenguaje de programación más popular del mundo](https://www.economist.com/graphic-detail/2018/07/26/python-is-becoming-the-worlds-most-popular-coding-language)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Ciertamente no me propuse a crear un lenguaje destinado al consumo masivo. **(Guido van Rossum, científico de la computación)**.\n",
+    "> Ciertamente no me propuse crear un lenguaje destinado al consumo masivo. **(Guido van Rossum, científico de la computación)**.\n",
     "\n",
     "*La simplicidad y versatilidad del lenguaje Python lo han llevado a triplicar su número de búsquedas por usuarios en Google desde el 2010*, incluso por encima de Kim Kardashian. Ambos atributos son muy aprovechados por sus practicantes, **los Pythonistas**, quienes **han subido a la red cerca de 145,000 librerías** que ayudan desde el *desarrollo de videojuegos hasta el análisis de datos para la astronomía*.\n",
     "\n",
-    "Parece que **Python es un gran imperio** cuya supremacía volverá obsoletos a los otros lenguajes. Tan sólo basta mencionar que **la CIA lo ha empleado para hackeos, Google para el desarrollo web y Pixar para la producción de películas**. Pero no hablemos muy pronto, pues otros lenguajes, como *C o Java, no desaparecerán así de fácil*; ya que estos dan al usuario más control sobre lo que ocurre en el procesador de la computadora. "
+    "Parece que **Python es un gran imperio** cuya supremacía volverá obsoletos a los otros lenguajes. Tan sólo basta mencionar que **la CIA lo ha empleado para hackeos, Google para el desarrollo web y Pixar para la producción de películas**. Pero no hablemos muy pronto, pues otros lenguajes, como *C o Java, no desaparecerán así de fácil*; ya que estos dan al usuario más control sobre lo que ocurre en el procesador de la computadora. \n",
+    "\n",
+    "![](Python.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Referencias consultadas\n",
+    "+ Tung, L. (2019). Programming language of the year? Python is standout in latest rankings. Consultado el 31 de agosto del 2019, de ZD Net. Sitio web: <https://www.zdnet.com/article/programming-language-of-the-year-python-is-standout-in-latest-rankings/>\n",
+    "+ The Data Team. (2018). Python is becoming the world’s most popular coding language. Consultado el 31 de agosto del 2019, de The Economist. Sitio web: <https://www.economist.com/graphic-detail/2018/07/26/python-is-becoming-the-worlds-most-popular-coding-language>"
    ]
   }
  ],
